--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,26 +2,12 @@
     width: 320px;
     margin-left: auto;
     margin-right: auto;
-    background-color: var(--white-backgtound-color);
     padding: 0 16px;
-
     overflow: hidden;
+    color: var(--text-color);
+    background-color: var(--backgtound-color);
 }
 
-.theme {
-    height: 100%;
-}
-
-.white-theme {
-    background-color: var(--white-backgtound-color);
-    color: var(--dark-text-color);
-    height: 100%;
-}
-
-.dark-theme {
-    background-color: var(--dark-background-color);
-    color: var(--white-text-color);
-}
 
 @media screen and (min-width: 768px) {
     .container {
