--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -146,7 +146,7 @@
 
 .custom-check.check::after {
     margin-left: 21px;
-    transition: #f4f4f4 0.5s;
+    transition: all 0.5s;
     background-color: #f4f4f4;
 }
 
