--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -9,6 +9,11 @@
     transition: all 0.5s;
 }
 
+.view {
+    width: 100%;
+    height: 100%;
+}
+
 
 @media screen and (min-width: 768px) {
     .container {
