--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,12 +7,12 @@
     transition: all 0.5s;
     display: flex;
     justify-content: center;
-    background-color: inherit;
+    background-color: var(--backgtound-color);
 }
 
 .modal-container.is-Open {
     top: 0;
-    transition: all 0.5s;
+
 }
 
 .modal {
@@ -46,7 +46,7 @@
     right: 16px;
     -webkit-mask-image: url(../../img/svg/chevron-right.svg);
     background-color: var(--shevron-color);
-
+    transition: all 0.5s;
 }
 
 .navigations-btn.active {
@@ -120,7 +120,6 @@
     height: 20px;
     border: 1px solid var(--primal-color);
     border-radius: 20px;
-    transition: all 0.5s;
     margin-left: 8px;
     margin-right: 8px;
 }
@@ -129,7 +128,7 @@
     border-color: var(--white-backgtound-color);
     border: 1px solid #f4f4f4;
     background-color: var(--primal-color);
-
+    transition: all 0.5s;
 }
 
 .custom-check::after {
@@ -142,6 +141,7 @@
     border-radius: 50%;
     background-color: var(--primal-color);
     transition: all 0.5s;
+
 }
 
 .custom-check.check::after {
