--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -9,16 +9,22 @@
     justify-content: center;
     background-color: var(--background-color);
     z-index: 1000;
+    transition: all 2s;
+}
+
+.is-Open {
+    transition: all 0.5s;
 }
 
 .modal-container.is-Open {
     top: 0;
-
+    transition: all 1s;
 }
 
 .modal {
     width: 320px;
     padding-top: 125px;
+
 }
 
 .navigations-box {
