--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -24,8 +24,8 @@
     position: absolute;
     top: 40px;
     display: block;
-    width: 112px;
-    height: 24px;
+    min-width: 112px;
+    min-height: 24px;
     background-color: #4440F6B2;
     display: flex;
     align-items: center;
@@ -60,7 +60,7 @@ h3 {
     position: absolute;
     width: 126px;
     height: 28px;
-    left: 154px;
+    right: 8px;
     top: 355px;
     background: #FFFFFF;
     border-radius: 20px;
@@ -72,8 +72,15 @@ h3 {
     display: flex;
     align-items: center;
     padding: 6px 12px;
-    justify-content: space-between;
+    overflow: hidden;
+    justify-content: flex-end;
+    transition: all 0.2s;
 }
+
+.in-favorite {
+    width: 168px;
+}
+
 
 .add-to-favorite::after {
     content: '';
@@ -83,10 +90,53 @@ h3 {
     display: block;
     background-repeat: no-repeat;
     background-position: center;
+
+}
+
+.add-to-favorite .add-animation {
+    width: 85px;
+    overflow: hidden;
+    position: absolute;
+    left: 12px;
+    font-weight: 500;
+
+}
+
+.add-to-favorite.in-favorite .content {
+    margin-left: -118px;
+    transition: all 0.2s;
+}
+
+.add-to-favorite.in-favorite .add-animation {
+    width: 124px;
+    transition: all 0.2s;
+}
+
+.add-to-favorite .content {
+    width: 260px;
+    display: block;
+    transition: all 0.2s;
+}
+
+
+.add-to-favorite>span>.content {
+
+    top: 6px;
+    left: 12px;
+    text-align: left;
+    width: 250px;
+}
+
+.add-to-favorite.in-favorite>span>.content {
+    left: -110px;
 }
 
 .in-favorite::after {
     background-image: url('../../img/svg/full_heard.svg');
+    width: 16px;
+    height: 16px;
+
+    transition: all 0.1s,
 }
 
 .help-thumb {
@@ -116,7 +166,6 @@ h3 {
 
 .already-to-read::before {
     content: '';
-
     position: absolute;
     width: 107px;
     top: 0;
@@ -130,4 +179,11 @@ h3 {
 
 .to-original-post {
     color: var(--primal-color);
+}
+
+.delete-favorite {
+    height: 0;
+    margin: 0;
+    transition: margin 0.2s, height 0.5s;
+    overflow: hidden;
 }
