--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
   border: none;
 }
 
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
 :root {
   --primal-color: #4440F6;
   --second-color: #A8A8A8;
